--- a/index.html
+++ b/index.html
@@ -1,78 +1,23 @@
-<script>
-
-let playerScore = 0;
-let computerScore = 0;
-
-function computerPlay(){
-    let computerPick = Math.floor(Math.random()*3)+1;
-    if(computerPick == 1){
-        return 'rock';
-    }else if(computerPick == 2){
-        return 'paper';
-    }else{
-        return 'scissors';
-    }
-}
-
-function playRound(playerSelection, computerSelection){
-    while(playerSelection == 'rock'){
-        if(computerSelection == 'rock'){
-            return 'It\'s a tie!'
-        }else if(computerSelection == 'scissors'){
-            return 'You win!'
-            playerScore++
-        }else{
-            return 'You lose!'
-            computerScore++
-        }
-    }
-    while(playerSelection == 'paper'){
-        if(computerSelection == 'rock'){
-            return 'You win!'
-            playerScore++
-        }else if(computerSelection == 'scissors'){
-            return 'You lose!'
-            computerScore++
-        }else{
-            return 'It\'s a tie!'
-        }
-    }
-    while(playerSelection == 'scissors'){
-        if(computerSelection == 'rock'){
-            return 'You lose!'
-            computerScore++
-        }else if(computerSelection == 'scissors'){
-            return 'It\'s a tie!'
-        }else{
-            return 'You win!'
-            playerScore++
-        }
-    }  
-}
-
-function game(){
-    for(let gameCount = 0; gameCount<5; gameCount++){
-        let playerPick = prompt("Enter rock, paper, or scissors").toLowerCase();
-        let computerChoice = computerPlay();
-        let result = playRound(playerPick,computerChoice);
-        if(result == "You win!"){
-            alert("Win!");
-            console.log(playerScore);
-            console.log(computerScore);
-        }else if(result == "You lose!"){
-            alert("Loss!");
-            console.log(playerScore);
-            console.log(computerScore);
-        }else if(result == "It\'s a tie!"){
-            alert("Tie!");
-            console.log(playerScore);
-            console.log(computerScore);
-        }else{
-            alert("error");
-        }
-    }
-}
-
-game();
-
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+    <link type="text/css" href="style.css" rel="stylesheet">
+    <title>The Rock Paper Scissors Game</title>
+</head>
+<body>
+    <div class=header>
+        <h1>Welcome to the Rock, Paper, Scissors game!</h1>
+        <h3>Make your selection by clicking the butttons below.</h3>
+    </div>
+    <div class="playerChoice">
+        <input type="button" value="Rock" accesskey="r" onclick="game()">
+        <input type="button" value="Paper" accesskey="p" onclick="game()">
+        <input type="button" value="Scissors" accesskey="s" onclick="game()">
+    </div>
+    <div class="scoreboard">
+        <input type="text" id="playerScore">
+        <input type="text" id="computerScore">
+    </div>
+</body>
+<script type="text/javascript" src="script.js"></script>
+</html>
