Connected buttons to JS player selection function

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <div class=header>
-        <h1>Welcome to the Rock, Paper, Scissors game!</h1>
-        <h3>Make your selection by clicking the butttons below.</h3>
+        <h1>Welcome to the Rock Paper Scissors game!</h1>
+        <h3>Make your selection by clicking the buttons below.</h3>
     </div>
     <div class="playerChoice">
-        <input type="button" value="Rock" accesskey="r" onclick="game()">
-        <input type="button" value="Paper" accesskey="p" onclick="game()">
-        <input type="button" value="Scissors" accesskey="s" onclick="game()">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors" >Scissors</button>
     </div>
     <div class="scoreboard">
         <input type="text" id="playerScore">
